@@ -13,11 +13,19 @@ Version 0.3
 * Add minLength parameter
 * Fix splitting jobs at clock boundaries
 * break= parameter to force job breaks at particular times
+* ANTENNA blocks get antenna names capitalized
+* Clean up parsing of .v2d a little bit
+* (Adam) Initialize some ANTENNA block variables
+* (Adam) Clean up LBA format
+* Support a wider range of time formats in the .v2d file
+* make .v2d parameters "mjdStart" and "mjdStop" operate at specified times, not 
+  at scan boundaries
 
 Version 0.2
 ~~~~~~~~~~~
 * Make several classes subclasses of VexInterval to simplify things
-* Compute "Computational load" -- an estimate of the number of numerical operations required.
+* Compute "Computational load" -- an estimate of the number of numerical 
+  operations required.
 * Initial (untested) support for ephemeris-driven targets
 * Estimate output data size / allow job splitting based on job size
 * Version for DiFX-1.5
@@ -29,7 +37,8 @@ Version 0.1
 * allow colon separated RAs and Decs in the config file
 * implement ANTENNA blocks
 * write SCAN_GAP scans instead of no scans 
-* start time and stop time are no longer expanded to full length of all included scans
+* start time and stop time are no longer expanded to full length of all  
+  included scans
 * write flag file that is compliant with difx2fits
 * add oms2v2f to this package
 * implement maxLength (seconds)
